fix: step line alignment

--- a/src/pages/ConfirmPayment/index.css
+++ b/src/pages/ConfirmPayment/index.css
@@ -11,3 +11,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+.vertical-linear-stepper-container .MuiStepConnector-line {
+  position: relative;
+  right: 4px;
+}
